complete authentication user (basic and use jwt)
